-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0-rc1
-
None
-
Kubuntu 22.04
-
-
f4916b312 (13.0), 3b80da711 (master)
Setting the limit of the number of clangd worker threads does not seem to have effect. In my settings, I have this limit set to 4 and still while editing C++ source code I can often see 100% CPU utilization on all 8 cores/16 threads by clangd processes.
I've attached a screenshot of htop during one of these high CPU utilization spikes. In this screenshot, htop is configured to display userland threads separately, so you can see the number of active threads is definitely much more than 4.
This is a regression in QtCreator 12. With QtCreator 11.0.3 CPU load during code editing is considerably lower.
| For Gerrit Dashboard: QTCREATORBUG-29943 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 546233,2 | Core: Lower the document auto-suspension threshold again | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 554379,2 | ClangCodeModel: Make "live update" of dependent sources opt-in | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |