Core: Lower the document auto-suspension threshold again

This was already done in 509600da99fe48db30d930b308129da43abdbd40, but
accidentally reverted by a refactoring in
7f908d737b0e017e65e917c65b19499f3093fa4c.

Task-number: QTCREATORBUG-29943
Change-Id: Ica3df46fa9610729629704746a8e1003bb89f465
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>